<resources>
    <string name="app_name">MMMFingers</string>
    <string name="action_settings">Settings</string>
    <string name="action_score">Leaderboard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="start_fragment_label">Welcome</string>
    <string name="game_fragment_label">Game</string>
    <string name="end_fragment_label">Good Game</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="score_fragment_label">High Scores</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="start_fragment_text">This is the Start Screen</string>
    <string name="end_fragment_text">This is the End Screen</string>
    <string name="game_fragment_text">This is the Game Screen</string>
    <string name="action_exit">Exit</string>
    <string name="action_start">Start</string>
</resources>